POST /camera/position allow two angles for two axes
